srcs/tester/base/map/operator=/log.txt
In file included from ./base/map/operator=/patched.cpp:3:
../map.hpp:535:17: error: invalid operands to binary expression ('ft::map<char, int, ft::less<char>, std::allocator<ft::pair<const char, int> > >' and 'const ft::map<char, int, ft::less<char>, std::allocator<ft::pair<const char, int> > >')
      if (*this != x) {
          ~~~~~ ^  ~
./base/map/operator=/patched.cpp:14:9: note: in instantiation of member function 'ft::map<char, int, ft::less<char>, std::allocator<ft::pair<const char, int> > >::operator=' requested here
  second=first;                // second now contains 3 ints
        ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/allocator.h:160:7: note: candidate function not viable: no known conversion from 'ft::map<char, int, ft::less<char>, std::allocator<ft::pair<const char, int> > >' to 'const std::allocator<ft::pair<const char, int> >' for 1st argument
      operator!=(const allocator&, const allocator&) _GLIBCXX_NOTHROW
      ^
../Utils.hpp:107:17: note: candidate function not viable: no known conversion from 'ft::map<char, int, ft::less<char>, std::allocator<ft::pair<const char, int> > >' to 'const pair<const char, int>' for 1st argument
    friend bool operator!= (const pair<T1,T2>& lhs, const pair<T1,T2>& rhs) { return !(lhs == rhs); };
                ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/postypes.h:227:5: note: candidate template ignored: could not match 'fpos' against 'map'
    operator!=(const fpos<_StateT>& __lhs, const fpos<_StateT>& __rhs)
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/stl_pair.h:461:5: note: candidate template ignored: could not match 'pair' against 'map'
    operator!=(const pair<_T1, _T2>& __x, const pair<_T1, _T2>& __y)
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/stl_iterator.h:337:5: note: candidate template ignored: could not match 'reverse_iterator' against 'map'
    operator!=(const reverse_iterator<_Iterator>& __x,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/stl_iterator.h:375:5: note: candidate template ignored: could not match 'reverse_iterator' against 'map'
    operator!=(const reverse_iterator<_IteratorL>& __x,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/stl_iterator.h:900:5: note: candidate template ignored: could not match '__normal_iterator' against 'map'
    operator!=(const __normal_iterator<_IteratorL, _Container>& __lhs,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/stl_iterator.h:907:5: note: candidate template ignored: could not match '__normal_iterator' against 'map'
    operator!=(const __normal_iterator<_Iterator, _Container>& __lhs,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/ext/new_allocator.h:173:2: note: candidate template ignored: could not match 'new_allocator' against 'map'
        operator!=(const new_allocator&, const new_allocator<_Up>&)
        ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/allocator.h:174:5: note: candidate template ignored: could not match 'allocator' against 'map'
    operator!=(const allocator<_T1>&, const allocator<_T2>&)
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/basic_string.h:6188:5: note: candidate template ignored: could not match 'basic_string' against 'map'
    operator!=(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/basic_string.h:6201:5: note: candidate template ignored: could not match 'const _CharT *' against 'ft::map<char, int, ft::less<char>, std::allocator<ft::pair<const char, int> > >'
    operator!=(const _CharT* __lhs,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/basic_string.h:6213:5: note: candidate template ignored: could not match 'basic_string' against 'map'
    operator!=(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/streambuf_iterator.h:214:5: note: candidate template ignored: could not match 'istreambuf_iterator' against 'map'
    operator!=(const istreambuf_iterator<_CharT, _Traits>& __a,
    ^
../iterator.hpp:180:6: note: candidate template ignored: could not match 'reverse_iterator' against 'map'
bool operator!=(const reverse_iterator<Iterator1>& x, const reverse_iterator<Iterator2>& y) {
     ^
1 error generated.
